# genai-maturity-framework

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/reports/: example_lite_report.md
skills/genai-maturity-assessor/: SKILL.md  requirements.txt
skills/genai-maturity-assessor/agents/: assistant.yaml  openai.yaml
skills/genai-maturity-assessor/assets/: report.css  report_template.html.j2
skills/genai-maturity-assessor/configs/: gap_scales.yaml  interview_inference.yaml  quality_model.yaml  recommendations.yaml
skills/genai-maturity-assessor/engine/: __init__.py  core.py
skills/genai-maturity-assessor/examples/: assessment_input_example.json
skills/genai-maturity-assessor/io/: __init__.py  exporters.py  interview.py
skills/genai-maturity-assessor/reporting/: __init__.py  html_report.py
skills/genai-maturity-assessor/scripts/: bootstrap.sh  build_report.py  render_pdf_playwright.py  sync_bundle.sh  validate_configs.py
skills/genai-maturity-assessor/tests/: conftest.py  test_core.py  test_interview.py  test_reporting.py
src/genai_maturity/: __init__.py  skill_bundle.py
src/genai_maturity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/genai_maturity/cli/: __init__.py  build_report.py  render_pdf_playwright.py  sync_skill_bundle.py  validate_configs.py
src/genai_maturity/engine/: __init__.py
src/genai_maturity/io/: __init__.py  interview.py
src/genai_maturity/reporting/: __init__.py
tests/: conftest.py  test_core.py  test_interview.py  test_reporting.py  test_skill_md.py
(+7 files in other folders)
